--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <!-- <main> -->
-    <div class="card">
+    <main class="card">
 
       <div class="card__top">
         <img src="images/illustration-hero.svg" alt="woman listening to music on mobile device">
@@ -50,7 +50,7 @@
 
       </div>
 
-    </div>
+    </main>
   <!-- </main> -->
 </body>
 </html>
